# bibliothekai

./: .dockerignore  .flake8  .gitignore  .prettierignore  .prettierrc  BUGS.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE.txt  PLAN.md  Procfile  README.md  compose.prod.yaml  docker-compose.yml  dump.json  entrypoint.sh  flake.nix  fly.toml  jest.config.js  justfile  load_data.sh  lwc-services.config.js  lwc.config.json  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
.devcontainer/: devcontainer.json
backend/: .dockerignore  .flake8  Dockerfile  asgi.py  dump.json  entrypoint.sh  urls.py  wsgi.py
backend/config/: development.py  production.py  settings.py
backend/requirements/: requirements.in  requirements.txt  requirements_dev.in  (+1 more)
biblia/: asgi.py  settings.py  urls.py  wsgi.py
bibliothekai/: README.md  package-lock.json  package.json
frontend/: .dockerignore  .eslintrc.json  Dockerfile  codegen.yml  lwr.config.json  package-lock.json  package.json  tsconfig.json  vite.config.js
lwc/: .eslintrc.json  lwc-services.config.js  lwc.config.json  package-lock.json  package.json  webpack.config.js
lwr/: Notes.md
proxy/: nginx.conf
requirements/: requirements.in  requirements.txt  requirements_dev.txt
src/: addPublishedReview.js  addUserReview.js  addVolume.js  compareTranslations.js  index.html  translationView.js
translations/: admin.py  graphql.py  jobs.py  models.py  permissions.py  serializers.py  tests.py  tests_api.py  urls.py  views.py
users/: forms.py  serializers.py  urls.py  views.py
(+435 files in other folders)
