[project]
name = "bibliothekai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.11.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.2",
    "django-allauth>=65.14.3",
    "django-anymail[amazon-ses]>=14.0",
    "django-manifest-loader>=1.0.0",
    "djangorestframework>=3.16.1",
    "graphene-django",
    "gunicorn>=25.1.0",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rest-framework-generic-relations>=2.2.0",
    "sentry-sdk[django]>=2.53.0",
    "sqlparse>=0.5.5",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.2.0",
    "ruff>=0.15.4",
]
